User checkpoint: Refactor KPI extraction API: improve JSON formatting and add dependency management.  Updated to handle multiple PDF uploads.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,12 @@ version = "0.1.0"
 description = ""
 authors = ["Your Name <you@example.com>"]
 requires-python = ">=3.11"
-dependencies = []
+dependencies = [
+    "fastapi>=0.115.8",
+    "google-generativeai>=0.8.4",
+    "openpyxl>=3.1.5",
+    "pandas>=2.2.3",
+    "pypdf2>=3.0.1",
+    "python-multipart>=0.0.20",
+    "uvicorn>=0.34.0",
+]
